source/stylesheets/custom.css.scss
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex: 1 0 auto;
}

.sh_default_li ul li {
  list-style-type: disc;
}
.more {
    border-bottom: 1px dashed #6DA3BD;
    color: #6DA3BD;
    cursor: pointer;
    display: inline;
}
.more:hover {
    border-color: #4D7285;
    color: #4D7285;
}

.sh_me_img {
  margin-right: 10px;
}

.sh_text_img {
  margin: 10px
}

.sh_img_center {
  display: block;
  margin: auto;
}

// fixed nav

$height_contact: 36px;

.sh_fixed_contact {
  position: fixed ;
  height: $height_contact;
  width: 100%;
  background-color: white;
}

.sh_deliver {
  padding-bottom: $height_contact
}

.sh_contact_content i {
  position: relative;
  top: 6px;
}

ul li ul {
  padding-left: 15px !important;
  list-style-type: circle !important;
}

ul li ul li {
  list-style-type: circle !important;
}

.sh_price {
  margin-left: -25px;
  margin-right: 5px
}

